# teo-comp

./: .gitignore  README.md  lab01-part1.hs  lab01-part2.hs  lab01-part2.yaml  mestrado-jefferson.cabal  shell.nix  stack.yaml  test-dfa.yaml  test-nfa.yaml  test-nfae.yaml
